Разметка страницы формы

--- a/source/index.html
+++ b/source/index.html
@@ -26,7 +26,7 @@
               </a>
             </div>
             <div class="site-list__item">
-              <a>
+              <a href="form.html">
                 Форма отзыва
               </a>
             </div>
@@ -42,7 +42,7 @@
     <main class="page-main">
       <h1 class="visually-hidden">Седона - небольшой городок в Аризоне</h1>
 
-      <section class="intro">
+      <section class="intro intro-index">
         <div class="intro__wrapper">
           <div class="intro-image">
             <img src="img/text-index.svg" alt="welcome">
@@ -50,9 +50,10 @@
         </div>
       </section>
 
-      <section class="about">
+      <section class="about about-index">
         <div class="about__wrapper">
-          <div class="about-slogan">Седона — небольшой городок в Аризоне, заслуживающий большего!<br>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</div>
+          <div class="about-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</div>
+          <div class="about-text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</div>
         </div>
 
         <div class="reasons">
