Разметка страницы каталога

--- a/source/form.html
+++ b/source/form.html
@@ -57,101 +57,102 @@
         </div>
       </section>
 
-      <section class="fullname">
-        <div class="fullname__wrapper">
-          <div class="fullname-title">Представьтесь:</div>
-          <form class="fullname-form" action="https://echo.htmlacademy.ru" method="post" >
-                <p class="fullname-item">
-                  <label class="fullname-name" for="name-id">Имя<sup>*</sup>:</label>
-                  <input id="name-id" type="text" name="name" placeholder="Петр" >
-                </p>
-                <p class="fullname-item">
-                  <label class="fullname-surname" for="surname-id">Фамилия<sup>*</sup>:</label>
-                  <input id="surname-id" type="text" name="surname" placeholder="Иванов" >
-                </p>
-                <p class="fullname-item">
-                  <label class="fullname-patronymic" for="patronymic-id">Отчество:</label>
-                  <input id="patronymic-id" type="text" name="partonymic" placeholder="Александрович" >
-                </p>
-          </form>
-        </div>
-      </section>
+      <form class="form-form" action="https://echo.htmlacademy.ru" method="post">
+        <section class="fullname">
+          <div class="fullname__wrapper">
+            <div class="fullname-title">Представьтесь:</div>
+            <!-- <form class="fullname-form" action="https://echo.htmlacademy.ru" method="post" > -->
+                  <p class="fullname-item">
+                    <label class="fullname-name" for="name-id">Имя<sup>*</sup>:</label>
+                    <input id="name-id" type="text" name="name" placeholder="Петр" >
+                  </p>
+                  <p class="fullname-item">
+                    <label class="fullname-surname" for="surname-id">Фамилия<sup>*</sup>:</label>
+                    <input id="surname-id" type="text" name="surname" placeholder="Иванов" >
+                  </p>
+                  <p class="fullname-item">
+                    <label class="fullname-patronymic" for="patronymic-id">Отчество:</label>
+                    <input id="patronymic-id" type="text" name="partonymic" placeholder="Александрович" >
+                  </p>
+            <!-- </form> -->
+          </div>
+        </section>
 
-      <section class="contacts">
-        <div class="contacts__wrapper">
-          <div class="contacts-title">Контактная информация:</div>
-          <form class="contacts-form" action="https://echo.htmlacademy.ru" method="post" >
-            <p class="contacts-item">
-              <label class="order-name" for="name-id">Контактный телефон<sup>*</sup>:</label>
-              <input id="name-id" type="tel" name="tel" placeholder="Введите телефон" >
-            </p>
-            <p class="contacts-item">
-              <label class="order-email" for="e-mail-id">Электронная почта<sup>*</sup>:</label>
-              <input id="e-mail-id" type="email" name="e-mail" placeholder="Введите e-mail" >
-            </p>
-          </form>
-        </div>
-      </section>
+        <section class="contacts">
+          <div class="contacts__wrapper">
+            <div class="contacts-title">Контактная информация:</div>
+            <!-- <form class="contacts-form" action="https://echo.htmlacademy.ru" method="post" > -->
+              <p class="contacts-item">
+                <label class="order-name" for="name-id">Контактный телефон<sup>*</sup>:</label>
+                <input id="name-id" type="tel" name="tel" placeholder="Введите телефон" >
+              </p>
+              <p class="contacts-item">
+                <label class="order-email" for="e-mail-id">Электронная почта<sup>*</sup>:</label>
+                <input id="e-mail-id" type="email" name="e-mail" placeholder="Введите e-mail" >
+              </p>
+            <!-- </form> -->
+          </div>
+        </section>
 
-      <section class="impression">
-        <div class="impression__wrapper">
-          <fieldset>
-            <legend class="impression-title">Ваше общее впечатление:</legend>
-              <ul class="impression-list">
-                <li class="impression-item">
-                  <input class="impression-item-input hide" type="radio" name="impression-group" value="positive" id="impression-positive" checked>
-                    <label for="impression-positive">Скорее положительное</label>
-                </li>
-                <li class="impression-item">
-                  <input class="impression-item-input hide" type="radio" name="impression-group" value="negative" id="impression-negative">
-                    <label for="impression-negative">Скорее негативное</label>
-                </li>
-                <li class="impression-item">
-                  <input class="impression-item-input hide" type="radio" name="impression-group" value="neutral" id="impression-neutral">
-                    <label for="impression-neutral">Затрудняюсь ответит</label>
-              </ul>
-          </fieldset>
-        </div>
-      </section>
-
-      <section class="attractions">
-        <div class="attractions__wrapper">
-          <fieldset>
-            <legend class="attractions-title">Посещенные достопримечательности:</legend>
-              <ul class="attractions-list">
-                <li class="attractions-item">
-                  <input class="attractions-item-input hide" type="checkbox" name="attractions-group" id="bridge" checked>
-                  <label for="bridge">Мост дьявола</label>
+        <section class="impression">
+          <div class="impression__wrapper">
+            <fieldset>
+              <legend class="impression-title">Ваше общее впечатление:</legend>
+                <ul class="impression-list">
+                  <li class="impression-item">
+                    <input class="impression-item-input hide" type="radio" name="impression-group" value="positive" id="impression-positive" checked>
+                      <label for="impression-positive">Скорее положительное</label>
                   </li>
-                <li class="attractions-item">
-                  <input class="attractions-item-input hide" type="checkbox" name="attractions-group" id="mountain" checked>
-                  <label for="mountain">Гора-Колокол</label>
-                </li>
-                <li class="attractions-item">
-                  <input class="attractions-item-input hide" type="checkbox" name="attractions-group" id="park" checked>
-                  <label for="park">Слайд-парк</label>
-                </li>
-                <li class="attractions-item">
-                  <input class="attractions-item-input hide" type="checkbox" name="galattractions-grouplery" id="rocks">
-                  <label for="rocks">Красные скалы</label>
-                </li>
-              </ul>
-         </fieldset>
-        </div>
-      </section>
+                  <li class="impression-item">
+                    <input class="impression-item-input hide" type="radio" name="impression-group" value="negative" id="impression-negative">
+                      <label for="impression-negative">Скорее негативное</label>
+                  </li>
+                  <li class="impression-item">
+                    <input class="impression-item-input hide" type="radio" name="impression-group" value="neutral" id="impression-neutral">
+                      <label for="impression-neutral">Затрудняюсь ответит</label>
+                </ul>
+            </fieldset>
+          </div>
+        </section>
 
-      <section class="review">
-        <div class="review__wrapper">
-          <form class="review-form" action="https://echo.htmlacademy.ru" method="post" >
-            <p class="review-item">
-              <label class="review-title" for="text-id">Опишите свои эмоции:</label>
-              <textarea id="text-id" name="text" placeholder="Опишите подробно все свои восторги" ></textarea>
-            </p>
-            <button class="button send-review" type="submit">Отправить отзыв</button>
-          </form>
-        </div>
-      </section>
+        <section class="attractions">
+          <div class="attractions__wrapper">
+            <fieldset>
+              <legend class="attractions-title">Посещенные достопримечательности:</legend>
+                <ul class="attractions-list">
+                  <li class="attractions-item">
+                    <input class="attractions-item-input hide" type="checkbox" name="attractions-group" id="bridge" checked>
+                    <label for="bridge">Мост дьявола</label>
+                    </li>
+                  <li class="attractions-item">
+                    <input class="attractions-item-input hide" type="checkbox" name="attractions-group" id="mountain" checked>
+                    <label for="mountain">Гора-Колокол</label>
+                  </li>
+                  <li class="attractions-item">
+                    <input class="attractions-item-input hide" type="checkbox" name="attractions-group" id="park" checked>
+                    <label for="park">Слайд-парк</label>
+                  </li>
+                  <li class="attractions-item">
+                    <input class="attractions-item-input hide" type="checkbox" name="galattractions-grouplery" id="rocks">
+                    <label for="rocks">Красные скалы</label>
+                  </li>
+                </ul>
+          </fieldset>
+          </div>
+        </section>
 
+        <section class="review">
+          <div class="review__wrapper">
+            <!-- <form class="review-form" action="https://echo.htmlacademy.ru" method="post" > -->
+              <p class="review-item">
+                <label class="review-title" for="text-id">Опишите свои эмоции:</label>
+                <textarea id="text-id" name="text" placeholder="Опишите подробно все свои восторги" ></textarea>
+              </p>
+              <button class="button send-review" type="submit">Отправить отзыв</button>
+            <!-- </form> -->
+          </div>
+        </section>
+    </form>
     </main>
 
     <footer class="page-footer">
