--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   </head>
   <body class="page__body">
     <header class="page-header">
@@ -49,7 +50,7 @@
       <section class="intro intro-index">
         <div class="intro__wrapper">
           <div class="intro-text">
-            <img src="img/text-index.svg" alt="welcome">
+            <img src="img/intro-text.svg" alt="welcome">
           </div>
           <div class="intro-triangle"></div>
         </div>
@@ -153,8 +154,8 @@
         </div>
 
         <div class="page-footer__copyright copyright">
-          <b class="copyright__text">Разработано:</b>
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+          <b class="copyright__text">Разработано</b>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive"><span class="visually-hidden">HTML Academy</span></a>
         </div>
 
       </div>
