Стилизация страницы каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -53,6 +53,7 @@
           <div class="intro-logo">
             <img src="img/intro-logo.svg" alt="welcome">
           </div>
+          <div class="intro-triangle"></div>
         </div>
       </section>
 
@@ -99,28 +100,39 @@
           <div class="video-image">
             <img src="img/video-mobile.jpg" alt="картинка видеопрезентация">
           </div>
-          <div class="video-settings"></div>
+          <div class="video-settings">
+            <div class="video-volume">
+              <div class="video-volume__scale"></div>
+              <div class="video-volume__slider"></div>
+            </div>
+            <div class="video-control">
+              <div class="video-control_replay"></div>
+              <div class="video-control-subtitles"></div>
+              <div class="video-control-fullscreen"></div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
+
         <div class="page-footer__hashtag">
           <b>#visitsedona</b>
         </div>
 
         <div class="page-footer__social social">
-          <b class="social__title">Давайте дружить!</b>
+          <b class="social__title visually-hidden">Давайте дружить!</b>
           <ul class="social__list">
             <li class="social__item">
-              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"><span class="visually-hidden">Мы в Вконтакте</span></a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"><span class="visually-hidden">Мы в Фейсбуке</span></a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
+              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy"><span class="visually-hidden">Мы в Инстаграме</span></a>
             </li>
           </ul>
         </div>
