--- a/source/index.html
+++ b/source/index.html
@@ -26,7 +26,7 @@
               </button>
             </div>
             <div class="site-list__item">
-              <a>
+              <a href="catalog.html">
                 Фото и видео
               </a>
             </div>
