Адаптивная сетка для главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -50,7 +50,7 @@
       <section class="intro intro-index">
         <div class="intro__wrapper">
           <div class="intro-text">
-            <img src="img/intro-text.svg" alt="welcome">
+
           </div>
           <div class="intro-triangle"></div>
         </div>
@@ -62,17 +62,23 @@
           <div class="about-text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</div>
           <div class="about-triangle"></div>
         </div>
+      </section>
 
-        <div class="reasons">
-          <div class="reasons-list">
-            <div class="reasons-item">
-              <div class="reasons-item__title">Настоящий городок</div>
-              <span class="reasons-item__number">— №1 —</span>
-              <div class="reasons-item__desc">Седона не аттракцион для туристов, там течет своя жизнь</div>
+      <section class="reasons reasons-img">
+        <div>
+          <div class="reasons-item">
+              <div class="reasons-item__wrapper">
+                <div class="reasons-item__title">Настоящий городок</div>
+                <span class="rreasons-item__desc">— №1 —</span>
+                <div class="reasons-item__desc">Седона не аттракцион для туристов, там течет своя жизнь</div>
+              </div>
               <div class="reasons-item__img"></div>
-            </div>
+          </div>
+        </div>
+      </section>
 
-            <div class="features">
+      <section class="features">
+           <div>
               <div class="features-list">
                 <div class="features-item">
                   <div class="features-item__img"></div>
@@ -91,28 +97,34 @@
                 </div>
               </div>
             </div>
+      </section>
 
+      <section class="reasons reasons-img">
             <div class="reasons-item">
-              <div class="reasons-item__title">Там есть мост дьявола</div>
-              <span class="reasons-item__number">— №2 —</span>
-              <div class="reasons-item__desc">Да, по нему можно пройти! Если вы осмелитесь, конечно</div>
               <div class="reasons-item__img"></div>
+              <div class="reasons-item__wrapper">
+                <div class="reasons-item__title">Там есть мост дьявола</div>
+                <span class="reasons-item__desc">— №2 —</span>
+                <div class="reasons-item__desc">Да, по нему можно пройти! Если вы осмелитесь, конечно</div>
+              </div>
             </div>
+      </section>
 
-            <div class="reasons-item">
+      <section class="reasons">
+           <div class="reasons-item">
               <div class="reasons-item__title">Небольшая площадь</div>
-              <span class="reasons-item__number">— №3 —</span>
+              <span class="reasons-item__desc">— №3 —</span>
               <div class="reasons-item__desc">Все интересные места находятся очень близко</div>
             </div>
             <div class="reasons-item">
               <div class="reasons-item__title">Красивая дорога</div>
-              <span class="reasons-item__number">— №4 —</span>
+              <span class="reasons-item__desc">— №4 —</span>
               <div class="reasons-item__desc">Ехать в Седону из лас-вегаса совсем не скучно!</div>
 
             </div>
             <div class="reasons-item">
               <div class="reasons-item__title">Мало туристов</div>
-              <span class="reasons-item__number">— №5 —</span>
+              <span class="reasons-item__desc">— №5 —</span>
               <div class="reasons-item__desc">Большинство едет в гранд каньон и толпится там</div>
             </div>
           </div>
