--- a/source/form.html
+++ b/source/form.html
@@ -50,24 +50,27 @@
       <section class="intro intro-form">
         <div class="intro__wrapper">
           <div class="intro-logo">
-            <img src="img/intro-logo.svg" alt="welcome">
+            <!-- <img src ="img/intro-logo.svg" alt="welcome"> -->
           </div>
           <div class="intro-triangle"></div>
         </div>
       </section>
 
       <section class="about about-form">
-        <div class="about">
+        <div class="about__wrapper">
           <div class="about-title">Оставьте свой отзыв</div>
           <div class="about-text">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях</div>
         </div>
       </section>
 
       <form class="form-form" action="https://echo.htmlacademy.ru" method="post">
-        <section class="fullname">
+        <section class="form__wrapper__main">
+          <!-- <section class="form__wrapper__second"> -->
+         <section class="fullname">
           <div class="fullname__wrapper">
             <div class="form-title fullname-title">Представьтесь:</div>
-            <!-- <form class="fullname-form" action="https://echo.htmlacademy.ru" method="post" > -->
+              <div class="fullname-list">
+
                   <p class="fullname-item">
                     <label class="fullname-name" for="name-id">Имя<sup>*</sup>:</label>
                     <input id="name-id" type="text" name="name" placeholder="Петр" >
@@ -80,69 +83,75 @@
                     <label class="fullname-patronymic" for="patronymic-id">Отчество:</label>
                     <input id="patronymic-id" type="text" name="partonymic" placeholder="Александрович" >
                   </p>
-            <!-- </form> -->
+
+                </div>
+
           </div>
         </section>
 
         <section class="contacts">
           <div class="contacts__wrapper">
             <div class="form-title contacts-title">Контактная информация:</div>
-            <!-- <form class="contacts-form" action="https://echo.htmlacademy.ru" method="post" > -->
+          <div class="contacts-list">
               <p class="contacts-item">
-                <label class="order-name" for="name-id">Контактный телефон<sup>*</sup>:</label>
+                <label class="contacts-name" for="name-id">Контактный телефон<sup>*</sup>:</label>
                 <input id="name-id" type="tel" name="tel" placeholder="Введите телефон" >
               </p>
               <p class="contacts-item">
-                <label class="order-email" for="e-mail-id">Электронная почта<sup>*</sup>:</label>
+                <label class="contacts-email" for="e-mail-id">Электронная почта<sup>*</sup>:</label>
                 <input id="e-mail-id" type="email" name="e-mail" placeholder="Введите e-mail" >
               </p>
-            <!-- </form> -->
+            </div>
           </div>
         </section>
+      <!-- </section> -->
 
         <section class="impression">
           <div class="impression__wrapper">
             <fieldset>
               <legend class="form-title impression-title">Ваше общее впечатление:</legend>
-                <ul class="impression-list">
-                  <li class="impression-item">
+                <div class="impression-list">
+                  <div class="impression-item">
                     <input class="impression-item-input hide" type="radio" name="impression-group" value="positive" id="impression-positive" checked>
                       <label for="impression-positive">Скорее положительное</label>
-                  </li>
-                  <li class="impression-item">
+                  </div>
+                  <div class="impression-item">
                     <input class="impression-item-input hide" type="radio" name="impression-group" value="negative" id="impression-negative">
                       <label for="impression-negative">Скорее негативное</label>
-                  </li>
-                  <li class="impression-item">
+                  </div>
+                  <div class="impression-item">
                     <input class="impression-item-input hide" type="radio" name="impression-group" value="neutral" id="impression-neutral">
                       <label for="impression-neutral">Затрудняюсь ответить</label>
-                </ul>
+                  </div>
+                </div>
             </fieldset>
           </div>
         </section>
+      </section>
+
 
         <section class="attractions">
           <div class="attractions__wrapper">
             <fieldset>
               <legend class="form-title attractions-title">Посещенные достопримечательности:</legend>
-                <ul class="attractions-list">
-                  <li class="attractions-item">
+                <div class="attractions-list">
+                  <div class="attractions-item">
                     <input class="attractions-item-input hide" type="checkbox" name="attractions-group" id="bridge" checked>
                     <label for="bridge">Мост дьявола</label>
-                    </li>
-                  <li class="attractions-item">
+                  </div>
+                  <div class="attractions-item">
                     <input class="attractions-item-input hide" type="checkbox" name="attractions-group" id="mountain" checked>
                     <label for="mountain">Гора-Колокол</label>
-                  </li>
-                  <li class="attractions-item">
+                  </div>
+                  <div class="attractions-item">
                     <input class="attractions-item-input hide" type="checkbox" name="attractions-group" id="park" checked>
                     <label for="park">Слайд-парк</label>
-                  </li>
-                  <li class="attractions-item">
+                  </div>
+                  <div class="attractions-item">
                     <input class="attractions-item-input hide" type="checkbox" name="galattractions-grouplery" id="rocks">
                     <label for="rocks">Красные скалы</label>
-                  </li>
-                </ul>
+                  </div>
+                </div>
           </fieldset>
           </div>
         </section>
@@ -154,7 +163,10 @@
                 <label class="form-title review-title" for="text-id">Опишите свои эмоции:</label>
                 <textarea id="text-id" name="text" placeholder="Опишите подробно все свои восторги" ></textarea>
               </div>
+              <di class="review-send__wrapper">
               <button class="button review-send" type="submit">Отправить отзыв</button>
+              <p class="explanation">* — обязательные поля</p>
+              </div>
             <!-- </form> -->
           </div>
         </section>
@@ -171,13 +183,28 @@
           <b class="social__title visually-hidden">Давайте дружить!</b>
           <ul class="social__list">
             <li class="social__item">
-              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"><span class="visually-hidden">Мы в Вконтакте</span></a>
+              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+                <span class="visually-hidden">Мы в Твитере</span>
+                <svg width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M11.3 0.166728C13 -0.333272 14.4 0.366728 15 1.26673C15.7 1.06673 16.4 0.766728 17.1 0.566728C17.1 1.36673 16.6 2.06673 16.2 2.26673C16.9 2.46673 17.5 1.76673 17.5 1.76673C17.3 2.76673 16.5 3.46673 15.9 3.76673C15.7 10.3667 12.6 14.7667 5.5 14.5667C5 14.5667 5.6 14.5667 5 14.5667C4.6 14.5667 0.7 14.1667 0 12.7667C2.3 12.9667 4 12.3667 4.8 11.6667C3.8 11.3667 2 11.1667 1.7 8.76673C2.1 8.86673 2.3 8.96673 3 8.86673C1.8 8.06673 0.4 7.36673 0.5 5.16673C0.8 5.46673 1.6 5.66673 1.9 5.66673C1.2 5.46673 -0.1 2.36673 1 0.866728C2.9 2.66673 4.8 4.36673 8.4 4.56673C8.5 2.26673 9.5 0.766728 11.3 0.166728Z" fill="white"/>
+                </svg>
+              </a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"><span class="visually-hidden">Мы в Фейсбуке</span></a>
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
+                <span class="visually-hidden">Мы в Фейсбуке</span>
+                <svg width="9" height="19" viewBox="0 0 9 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M6.3 3.4C7.1 3.4 7.9 3.4 8.7 3.4C8.7 2.3 8.7 1.2 8.7 0C7.7 0 6.8 0 5.8 0C2.7 0.2 1.5 2.4 1.9 6.1H0V9.6H2C2 12.7 2 15.8 2 18.9C3.3 18.9 4.6 18.9 5.8 18.9C5.8 15.8 5.8 12.7 5.8 9.6H8.7V6.1H5.8C5.8 5.1 5.8 3.7 6.3 3.4Z" fill="white"/>
+                </svg>
+              </a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy"><span class="visually-hidden">Мы в Инстаграме</span></a>
+              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
+                <span class="visually-hidden">Мы в Ютуб</span>
+                <svg width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M17.1 0H2.8C1.3 0 0 1.3 0 2.8V11.1C0 12.7 1.3 14 2.8 14H17.1C18.7 14 19.9 12.7 19.9 11.2V2.8C20 1.3 18.7 0 17.1 0ZM7 10.4V3.6L13.8 7L7 10.4Z" fill="white"/>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
